# rgx

./: .gitignore  .gitmodules  CHANGES.md  CLAUDE.md  COMMIT.md  Cargo.toml  DEVELOPMENT_NOTES.md  MEMORY.md  PGEN_REGEX_EMBEDDED_CODE_BLOCK_CONTRACT_PROPOSAL.md  PGEN_REGEX_PARSER_INTEGRATION_COMPLAINT.md  PROJECT_VISION.md  README.md  ROADMAP.md  RUST_CODEBASE_ANALYSIS.md  SESSION_BOOTSTRAP.md  WARP.md  debug_char_class.rs  test_char_class.rs
.github/workflows/: book.yml  ci.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md  why-rgx.md
book/src/advanced/: capture-locations.md  match-semantics.md  partial-matching.md  replacer-trait.md  unicode.md
book/src/appendices/: cli-guide.md  context-reference.md  execution-modes.md  pattern-syntax.md  pcre2-compatibility.md
book/src/core-api/: bytes-regex.md  error-diagnostics.md  iterators.md  match-type.md  position-aware.md  regex-cache.md  regex-set.md  safety-limits.md
book/src/getting-started/: capture-groups.md  finding-matches.md  first-match.md  regex-builder.md  replace-and-split.md
book/src/host-integration/: async-io.md  c-abi.md  data-exchange.md  file-matching.md  match-steering.md  predicate-callbacks.md  structured-events.md
book/src/internals/: architecture.md  compilation-pipeline.md  contributing.md  jit-compiler.md  measurement-methodology.md  nfa-dfa-engine.md  pcre2-conformance-audit.md  pcre2-conformance-residual.md  performance.md  pgen-integration.md  project-status.md  sandboxing.md  testing-philosophy.md  the-vm.md
book/src/real-world/: data-pipeline.md  http-router.md  log-monitor.md  tokenizer.md  waf-engine.md
docs/: A9_LANGUAGE_BINDINGS_DESIGN.md  BACKLOG.md  C1_JIT_COMPILATION_DESIGN.md  C2_NFA_DFA_DESIGN.md  C2_TDFA_DESIGN.md  CAPABILITY_MATRIX.md  CLI_GUIDE.md  GETTING_STARTED.md  HOST_INTEGRATION_ARCHITECTURE.md  HOST_INTEGRATION_GUIDE.md  PARSER_CONTRACT.md  PCRE2_COMPATIBILITY_MATRIX.md  PGEN_ISSUE_TRACKING.md  PUBLISH_READINESS.md  TECHNICAL_DECISIONS.md  TESTING_PHILOSOPHY.md  USER_GUIDE.md  architecture.md  extensibility.md  implementation-status.md  vm-implementation-guide.md
docs/guide/: 00-first-match.md  01-data-exchange.md  02-predicate-callbacks.md  03-match-steering.md  04-structured-events.md  05-async-io.md  06-file-matching.md  07-real-world.md  README.md  context-reference.md  execution-modes.md  quick-reference.md
examples/: test_alternation.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compile.rs  fuzz_match.rs  fuzz_replace.rs  fuzz_roundtrip.rs
pgen-issues/: PGEN-RGX-0001.yaml  PGEN-RGX-0002.yaml  PGEN-RGX-0003.yaml  PGEN-RGX-0004.yaml  PGEN-RGX-0005.yaml  PGEN-RGX-0006.yaml  PGEN-RGX-0007.yaml  PGEN-RGX-0008.yaml  PGEN-RGX-0009.yaml  PGEN-RGX-0010.yaml  PGEN-RGX-0011.yaml  PGEN-RGX-0012.yaml  PGEN-RGX-0013.yaml  PGEN-RGX-0014.yaml  PGEN-RGX-0015.yaml  PGEN-RGX-0016.yaml  PGEN-RGX-0017.yaml  PGEN-RGX-0018.yaml  PGEN-RGX-0019.yaml  PGEN-RGX-0020.yaml  PGEN-RGX-0021.yaml  PGEN-RGX-0022.yaml  PGEN-RGX-0023.yaml  PGEN-RGX-0024.yaml  PGEN-RGX-0025.yaml  PGEN-RGX-0026.yaml  PGEN-RGX-0027.yaml  PGEN-RGX-0028.yaml  PGEN-RGX-0029.yaml  PGEN-RGX-0030.yaml  PGEN-RGX-0031.yaml  PGEN-RGX-0032.yaml  PGEN-RGX-0033.yaml  PGEN-RGX-0034.yaml  PGEN-RGX-0035.yaml  PGEN-RGX-0036.yaml  PGEN-RGX-0037.yaml  PGEN-RGX-0038.yaml  PGEN-RGX-0039.yaml  PGEN-RGX-0040.yaml  (+48 more)
pgen-issues/artifacts/PGEN-RGX-0001/: pgen_ast_dump.json  pgen_ast_dump_outcome.json  repro_input.txt
pgen-issues/artifacts/PGEN-RGX-0002/: pgen_ast_dump.json  pgen_ast_dump_outcome.json  pgen_contract.json
pgen-issues/artifacts/PGEN-RGX-0003/: pgen_ast_dump.json  pgen_ast_dump_outcome.json  repro_input.txt
pgen-issues/artifacts/PGEN-RGX-0004/: pgen_ast_dump.json  pgen_ast_dump_outcome.json
pgen-issues/artifacts/PGEN-RGX-0005/: host_call_site.md  pgen_contract.json  repro_input.txt
pgen-issues/artifacts/PGEN-RGX-0006/: pgen_ast_dump.json  pgen_ast_dump_fixed.json  pgen_contract.json  pgen_contract_fixed.json  repro_input.txt
pgen-issues/artifacts/PGEN-RGX-0007/: pgen_ast_dump.json  pgen_ast_dump_fixed.json  pgen_contract.json  repro_input.txt
pgen-issues/artifacts/PGEN-RGX-0008/: pgen_ast_dump.json  pgen_ast_dump_fixed.json  pgen_contract.json  repro_input.txt
pgen-issues/artifacts/PGEN-RGX-0009/: pgen_ast_dump.json  pgen_ast_dump_fixed.json  pgen_contract.json  repro_input.txt
rgx-bench/: Cargo.toml
rgx-bench/baselines/: main.toml
rgx-bench/benches/: throughput.rs
rgx-bench/src/: lib.rs
rgx-bench/tests/: pcre2_parity.rs
rgx-capi/: Cargo.toml  README.md  STABILITY.md  build.rs  cbindgen.toml
rgx-capi/include/: rgx.h
rgx-capi/src/: lib.rs
rgx-capi/tests/: c_smoke_test.rs
rgx-capi/tests/c/: smoke_test.c
rgx-cli/: Cargo.toml  README.md
rgx-cli/src/: main.rs
rgx-core/: Cargo.toml  README.md
rgx-core/benches/: core_performance.rs
rgx-core/examples/: compile_phase_split.rs  debug_alternation.rs  debug_char_encoding.rs  dump_octal_brace_artifacts.rs  dump_pgen_artifacts.rs  dump_quant_ws_artifacts.rs  perf_profile_targets.rs  pgen_compile_perf_dump.rs  pgen_concat_dump.rs  pgen_qe_dump.rs
rgx-core/src/: ac.rs  ast.rs  book_doctests.rs  bytes.rs  cache.rs  compiler.rs  engine.rs  error.rs  events.rs  execution.rs  file.rs  javascript.rs  lexer.rs  lib.rs  log.rs  lua.rs  parser.rs  parsing.rs  pattern.rs  recursion.rs  regex_set.rs  rhai.rs  simd.rs  token.rs  unicode_support.rs  vars.rs  vm.rs  wasm.rs
rgx-core/src/c1/: codegen.rs  jit.rs  mod.rs  runtime.rs
rgx-core/src/c2/: byte_class.rs  classifier.rs  dfa.rs  mod.rs  nfa.rs  pike.rs  program.rs  simd_scan.rs  tdfa.rs
rgx-core/tests/: adversarial.rs  api_smoke_test.rs  c2_classifier.rs  c2_pike_differential.rs  c2_tdfa_dispatch.rs  host_integration.rs  pcre2_conformance.rs  property_tests.rs  stress_tests.rs
rgx-wasm/: Cargo.toml
rgx-wasm/src/: lib.rs
scripts/: capture-benchmark-trends.sh  check-book-examples.sh  check-capi-abi.sh  check-ci-paths.sh  lib-gate-receipt.sh  new-pgen-issue.sh  run-local-ci.sh  run-samply.sh  samply-hotpaths.py  setup-hooks.sh
scripts/git-hooks/: pre-commit
(+248 files in other folders)
