[package]
name = "rgx-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
rgx-core = { path = "../rgx-core" }
pcre2 = "0.2"

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false
