[package]
name = "rgx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "rgx command-line interface"
repository.workspace = true

[features]
default = []
pgen-parser = ["rgx-core/pgen-parser"]
lua = ["rgx-core/lua"]
javascript = ["rgx-core/javascript"]
wasm = ["rgx-core/wasm"]
all-languages = ["lua", "javascript", "wasm"]

[dependencies]
rgx-core = { path = "../rgx-core" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
once_cell = "1.19"
