[package]
name = "rgx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for the rgx regex engine — grep-like matching with color output, live tailing, and embedded code blocks"
documentation = "https://docs.rs/rgx-cli"
readme = "README.md"

[features]
default = []
pgen-parser = ["rgx-core/pgen-parser"]
lua = ["rgx-core/lua"]
javascript = ["rgx-core/javascript"]
rhai = ["rgx-core/rhai"]
wasm = ["rgx-core/wasm"]
all-languages = ["lua", "javascript", "rhai", "wasm"]

[dependencies]
rgx-core = { path = "../rgx-core", version = "0.1.0" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3"

[dev-dependencies]
wat = { workspace = true }
