[package]
name = "rgx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "High-performance regex engine core"
repository.workspace = true

[dependencies]
# SIMD and performance
wide = { workspace = true }
bytemuck = { workspace = true }
memchr = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# WebAssembly execution
wasmtime = { workspace = true, optional = true }

# Scripting languages
mlua = { workspace = true, optional = true }
rquickjs = { workspace = true, optional = true }
rhai = { workspace = true, optional = true }

# Utilities
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
regex-syntax = "0.8.6"
pgen = { path = "../subs/pgen/rust", default-features = false, features = ["generated_parsers"], optional = true }

[features]
default = ["std", "pgen-parser"]
std = []
trace = []
pgen-parser = ["dep:pgen", "dep:serde", "dep:serde_json"]
wasm = ["wasmtime"]
lua = ["mlua"]
javascript = ["rquickjs"]
rhai = ["dep:rhai"]
all-languages = ["wasm", "lua", "javascript", "rhai"]

[dev-dependencies]
criterion = { workspace = true }
wat = { workspace = true }

[[bench]]
name = "core_performance"
harness = false
