[package]
name = "rgx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance, programmable regex engine — ~99% PCRE2 feature parity, JIT-compiled, with embedded Lua/JS/Rhai/WASM code blocks"
documentation = "https://docs.rs/rgx-core"
readme = "README.md"

[dependencies]
# SIMD and performance
wide = { workspace = true }
bytemuck = { workspace = true }
memchr = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# WebAssembly execution
wasmtime = { workspace = true, optional = true }

# Scripting languages
mlua = { workspace = true, optional = true }
rquickjs = { workspace = true, optional = true }
rhai = { workspace = true, optional = true }

# File watching (OS-native: kqueue on macOS, inotify on Linux)
notify = { workspace = true }

# Unicode grapheme cluster support (\X)
unicode-segmentation = { workspace = true }

# Utilities
tracing = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", features = ["unbounded_depth"], optional = true }
serde_stacker = { version = "0.1", optional = true }
regex-syntax = "0.8.6"
pgen = { path = "../subs/pgen/rust", default-features = false, features = ["generated_parsers"], optional = true }

# C1 JIT compilation backend (Cranelift). Gated behind the `jit` feature.
# Pinned to the same minor version Wasmtime 14 already pulls in transitively
# so the workspace dependency graph stays single-version. See
# `docs/C1_JIT_COMPILATION_DESIGN.md` §4.2 for the rationale and §11 for the
# feature gating story.
cranelift-codegen = { version = "0.101", optional = true, default-features = false, features = ["std"] }
cranelift-frontend = { version = "0.101", optional = true, default-features = false, features = ["std"] }
cranelift-module = { version = "0.101", optional = true }
cranelift-jit = { version = "0.101", optional = true }
cranelift-native = { version = "0.101", optional = true }
target-lexicon = { version = "0.12", optional = true }

[features]
# C1 step 8 production cutover (2026-04-11): the `jit` feature is now
# default-on. Existing users get the JIT for free; users who don't
# want Cranelift in their dependency tree can opt out via
# `default-features = false`. The JIT was opt-in for steps 1–7 while
# the differential gate verified end-to-end correctness across the
# eligible subset; step 8 ships it as production-ready alongside
# the existing interpreter / DFA / Pike-VM dispatch tiers.
default = ["std", "pgen-parser", "jit"]
std = []
trace = []
pgen-parser = ["dep:pgen", "dep:serde", "dep:serde_json", "dep:serde_stacker"]
wasm = ["wasmtime"]
lua = ["mlua"]
javascript = ["rquickjs"]
rhai = ["dep:rhai"]
all-languages = ["wasm", "lua", "javascript", "rhai"]
# C1 JIT compilation backend (Cranelift). Default-on as of step 8.
# The Cranelift dependencies (cranelift-codegen / cranelift-frontend /
# cranelift-module / cranelift-jit / cranelift-native / target-lexicon)
# add ~2 MiB to the rgx-core dependency closure. Users who want to
# avoid Cranelift can opt out via `default-features = false` and
# explicitly include the other features they need.
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:target-lexicon",
]

[dev-dependencies]
criterion = { workspace = true }
wat = { workspace = true }
proptest = "1"

[[bench]]
name = "core_performance"
harness = false
