[package]
name = "rgx-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false

enhanced-description = "WASM runtime glue for rgx"

[dependencies]
rgx-core = { path = "../rgx-core", features = ["wasm"] }
wasmtime = { workspace = true }
anyhow = { workspace = true }

